[tool.poetry]
name = "nornir_paramiko"
version = "0.2.0"
description = ""
authors = ["Devon Mar <devonm@mdmm.ca>"]

[tool.poetry.plugins."nornir.plugins.connections"]
"paramiko" = "nornir_paramiko.plugins.connections:Paramiko"

[tool.poetry.dependencies]
python = "^3.6"
paramiko = "^2.7"
nornir = "^3.0.0"
scp = ">=0.13.3,<0.15.0"

[tool.poetry.dev-dependencies]
pytest = { version = "^7.1.2", python = "^3.7.2" }
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = { version = "^1.19.1", python = "^3.7" }
black = { version = "^22.6.0", python = "^3.7" }
pylint = { version = "^2.14.5", python = "^3.7.2" }
isort = { version = "^5.10.1", python = "^3.7" }
mypy = "^0.961"
types-paramiko = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = [
    "scp"
]
ignore_missing_imports = true