[tool.poetry]
name = "nornir_paramiko"
version = "0.3.0"
description = ""
authors = ["Devon Mar <devonm@mdmm.ca>"]
readme = "README.md"

[tool.poetry.plugins."nornir.plugins.connections"]
"paramiko" = "nornir_paramiko.plugins.connections:Paramiko"

[tool.poetry.dependencies]
python = "^3.6"
paramiko = "^2.7"
nornir = "^3.0.0"
scp = ">=0.13.3,<0.15.0"

[tool.poetry.dev-dependencies]
pytest = { version = "^7.2.0", python = "^3.7.2" }
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-autodoc-typehints = { version = "^1.22", python = "^3.7" }
black = { version = "^22.10.0", python = "^3.7" }
pylint = { version = "^2.15.5", python = "^3.7.2" }
isort = { version = "^5.10.1", python = "^3.7" }
mypy = "^0.971"
types-paramiko = "^2.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = [
    "scp"
]
ignore_missing_imports = true
