[tool.poetry]
name = "nornir_paramiko"
version = "0.3.0"
description = ""
authors = ["Devon Mar <devonm@mdmm.ca>"]
readme = "README.md"

[tool.poetry.plugins."nornir.plugins.connections"]
"paramiko" = "nornir_paramiko.plugins.connections:Paramiko"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^4.0"
nornir = "^3.0.0"
scp = ">=0.13.3,<0.15.0"

[tool.poetry.dev-dependencies]
pytest = { version = "^7.2.0", python = "^3.7.2" }
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = { version = "^1.22", python = "^3.7" }
mypy = "^0.971"
types-paramiko = "^2.11.6"
ruff = { version = "^0.12", python = "^3.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "scp"
]
ignore_missing_imports = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
  "C4",
  "E",
  "EXE",
  "F",
  "I",
  "ISC",
  "PERF",
  "PIE",
  "PYI",
  "UP",
  "W",
]
ignore = [
  "E501",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
